--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
     <link rel="stylesheet" href="css/main.css" />
     <script>
-        let w = window.innerWidth;
-        if (w < 481) {
-            location.href = "https://rushaned.github.io/m.index.html";
-        } else {
-            location.href = "https://rushaned.github.io/";
+        window.onload = function() {
+            let w = window.innerWidth;
+            if (w < 481) {
+                location.href = "https://rushaned.github.io/m.index.html";
+            } else {
+                location.href = "https://rushaned.github.io/";
+            }
         }
     </script>
     <style>
