--- a/3/index.html
+++ b/3/index.html
@@ -4,8 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css"
-        href="../../../fontawesome-free-5.7.2-web/fontawesome-free-5.7.2-web/css/all.min.css" />
+    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
     <link rel="stylesheet" href="../main.css">
     <link rel="stylesheet" href="style.css">
 </head>
